// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Choose template page renders error component 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-error-summary"
  >
    <h2
      class="nhsuk-error-summary__title"
      data-testid="error-summary"
    >
      There is a problem
    </h2>
    <ul
      class="nhsuk-list nhsuk-error-summary__list"
    >
      <li>
        <a
          href="#choose-template"
        >
          Component error message
        </a>
      </li>
    </ul>
  </div>
  <form
    action="/action"
  >
    <div
      class="nhsuk-form-group nhsuk-form-group--error"
    >
      <fieldset
        class="nhsuk-fieldset"
      >
        <legend
          class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
        >
          <h1
            class="nhsuk-fieldset__heading"
          >
            Choose a template type to create
          </h1>
        </legend>
        <div
          class="nhsuk-form-group nhsuk-form-group--error"
        >
          <span
            class="nhsuk-error-message"
            id="choose-template-error-message"
          >
            <span
              class="nhsuk-u-visually-hidden"
            >
              Error: 
            </span>
            Component error message
          </span>
          <div
            class="nhsuk-radios"
            id="choose-template"
          >
            <div
              class="nhsuk-radios__item"
            >
              <input
                aria-labelledby="choose-template-1--label"
                class="nhsuk-radios__input"
                data-testid="nhs-app-radio"
                id="choose-template-1"
                name="choose-template"
                type="radio"
                value="nhs-app"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="choose-template-1"
                id="choose-template-1--label"
              >
                NHS App message
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                aria-labelledby="choose-template-2--label"
                class="nhsuk-radios__input"
                data-testid="email-radio"
                id="choose-template-2"
                name="choose-template"
                type="radio"
                value="email"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="choose-template-2"
                id="choose-template-2--label"
              >
                Email
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                aria-labelledby="choose-template-3--label"
                class="nhsuk-radios__input"
                data-testid="sms-radio"
                id="choose-template-3"
                name="choose-template"
                type="radio"
                value="sms"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="choose-template-3"
                id="choose-template-3--label"
              >
                Text message (SMS)
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                aria-labelledby="choose-template-4--label"
                class="nhsuk-radios__input"
                data-testid="letter-radio"
                id="choose-template-4"
                name="choose-template"
                type="radio"
                value="letter"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="choose-template-4"
                id="choose-template-4--label"
              >
                Letter
              </label>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button"
      data-testid="submit-button"
      type="submit"
    >
      Continue
    </button>
  </form>
</DocumentFragment>
`;

exports[`Choose template page selects one radio button at a time 1`] = `
<DocumentFragment>
  <form
    action="/action"
  >
    <div
      class="nhsuk-form-group"
    >
      <fieldset
        class="nhsuk-fieldset"
      >
        <legend
          class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
        >
          <h1
            class="nhsuk-fieldset__heading"
          >
            Choose a template type to create
          </h1>
        </legend>
        <div
          class="nhsuk-form-group"
        >
          <div
            class="nhsuk-radios"
            id="choose-template"
          >
            <div
              class="nhsuk-radios__item"
            >
              <input
                aria-labelledby="choose-template-1--label"
                class="nhsuk-radios__input"
                data-testid="nhs-app-radio"
                id="choose-template-1"
                name="choose-template"
                type="radio"
                value="nhs-app"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="choose-template-1"
                id="choose-template-1--label"
              >
                NHS App message
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                aria-labelledby="choose-template-2--label"
                class="nhsuk-radios__input"
                data-testid="email-radio"
                id="choose-template-2"
                name="choose-template"
                type="radio"
                value="email"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="choose-template-2"
                id="choose-template-2--label"
              >
                Email
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                aria-labelledby="choose-template-3--label"
                class="nhsuk-radios__input"
                data-testid="sms-radio"
                id="choose-template-3"
                name="choose-template"
                type="radio"
                value="sms"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="choose-template-3"
                id="choose-template-3--label"
              >
                Text message (SMS)
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                aria-labelledby="choose-template-4--label"
                class="nhsuk-radios__input"
                data-testid="letter-radio"
                id="choose-template-4"
                name="choose-template"
                type="radio"
                value="letter"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="choose-template-4"
                id="choose-template-4--label"
              >
                Letter
              </label>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button"
      data-testid="submit-button"
      type="submit"
    >
      Continue
    </button>
  </form>
</DocumentFragment>
`;
